<resources>
    <string name="app_name">cookpad</string>
    <string name="str_empty"></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="str_titulo_receta">Receta titulo</string>
    <string name="str_nombre_autor_receta">Nombre autor receta</string>
    <string name="str_busqueda_tendencia">Búsquedas en tendencia</string>
    <string name="str_buscar_ingrediente_receta">Busca por receta o ingrediente</string>
    <string name="str_crea_algo_nuevo">Crea algo nuevo</string>
    <string name="str_ayuda_ins_otros">Ayuda e inspira a otros</string>
    <string name="str_receta">Receta</string>
    <string name="str_truco">Truco</string>
    <string name="str_ingrediente">Ingredientes</string>
    <string name="str_pasos">Pasos</string>
    <string name="str_tus_recetas">Tus recetas</string>
    <string name="str_guardadas">Guardadas</string>
    <string name="str_nuevas_recetas">Nuevas recetas</string>
    <string name="str_guardar">Guardar</string>
    <string name="str_reportar_receta">Reportar receta</string>

    <string name="str_anadir_ingr">Añadir ingrediente</string>
    <string name="str_borrar_ingr">Borrar este ingrediente</string>

    <string name="str_anadir_paso">Añadir paso</string>
    <string name="str_borrar_paso">Borrar este paso</string>

    <string name="str_borrar_receta">Borrar receta</string>

    <string name="formulario_receta_titulo">Título. Ej: Pollo al horno</string>
    <string name="formulario_receta_descripcion">¿Cuál es la historia de tu \nreceta, en quién te inspiraste,\n es especial para ti, para \n quién cocinaste?</string>
    <string name="formulario_receta_procedencia">Añade la procedencia de tu \nreceta</string>
    <string name="formulario_receta_comensales_descrp">Ej: 2 raciones</string>
    <string name="formulario_receta_tiempo_decrp">Ej: 1 h 30 min</string>
    <string name="formulario_receta_comensales_str">Comensales</string>
    <string name="formulario_receta_tiempo_str">Tiempo de elaboración</string>
    <string name="formulario_receta_desc_img">Añade una foto de tu receta hecha por ti</string>
    <string name="formulario_receta_ingrediente_dscr">Ej: 250 g harina</string>
    <string name="formulario_receta_paso_decrp">Ej: Mezcla los huevos \ncon la leche hasta... </string>

    <string name="formulario_truco_tit_descrp">Título: Cómo picar una cebolla</string>
    <string name="formulario_truco_descrp_truco">Para picar una cebolla, usa el \ncuchillo cocinero y corta la \ncebolla por la mitad desde la \npunta del tallo hasta la \nraiz inferior</string>

    <!--Login y registro-->
    <string name="str_email">Email</string>
    <string name="str_contraseña">Contraseña</string>
    <string name="str_iniciar_sesion">Iniciar Sesión</string>
    <string name="str_registrarse">Registrarse</string>
    <string name="str_nombre_usuario">Nombre</string>
    <string name="str_sexo">Sexo</string>
    <string name="str_fem">Femenino</string>
    <string name="str_mas">Masculino</string>

    <string name="registro_usuario">Registro usuario</string>

</resources>